...
    <item
        android:id="@+id/event_item"
        android:icon="@drawable/baseline_event_24"
        android:title="Events" />

    <item
        android:id="@+id/facility_item"
        android:icon="@drawable/facility"
        android:title="Facilities" />

    <item
        android:id="@+id/images_item"
        android:icon="@drawable/image_icon"
...
