<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/facName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Faciltiy Name"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/facDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Faciltiy Description"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/facRemoveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove Faciltity"/>

</LinearLayout>