...
        android:background="#007AFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="All Images"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
...
