...
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_as_organizer_button"
            android:layout_width="325dp"
            android:layout_height="63dp"
            android:layout_marginTop="15dp"
            android:padding="12dp"
            android:text="Sign in as Organizer"
            android:textColor="@color/black"
...
