...
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/icon_capacity"
                    tools:text="Join us for a day of family-friendly activities, games, and food! There will be face painting, a bouncy castle, live music, and much more." />

                <!-- Join Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_join"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="104dp"
                    android:padding="12dp"
                    android:text="Join Waiting List"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/blue"
                    app:cornerRadius="8dp"
                    app:layout_constraintTop_toBottomOf="@id/textView_description"
                    tools:layout_editor_absoluteX="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_leave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="104dp"
                    android:padding="12dp"
                    android:text="Leave Waiting List"
                    android:textColor="@color/white"
...
