...
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/qr_preview_card" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_startScanning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:padding="12dp"
                    android:text="@string/open_camera"
                    android:textColor="@color/white"
...
